src/test/deca/syntax/valid/objet/ThisNoSelection.deca
// Description : test this sans selection
// Resultats : ok

{
    this ;
}
