src/test/deca/syntax/invalid/extension/TabSansNom.deca
// Description:
//    Tableau sans nom
//

{
    int[] = {1, 2, 3};
}